feat: implement Redis Streams for high-performance parallel pipeline
- Add Redis dependency and configuration (host, port, stream prefix)
- Create RedisStreamManager for managing Redis Streams with consumer groups
- Implement consumer workers (Transcription, Aggregation, Broadcast)
- Create RedisPipeline that uses Redis Streams instead of in-memory queues
- Update API routers to support both legacy and Redis pipelines
- Add Redis management to PowerShell script (redis-start/stop/restart)
- Create docker-compose.yml for Redis + WhisperLive deployment
- Add comprehensive unit tests for all Redis components (32 tests)
- Add environment variables documentation

Architecture:
    Audio Stream → Transcription Workers → Segments Stream → Aggregation Workers → Events Stream → Broadcast Workers

Benefits:
- Parallel processing with multiple consumer groups
- Message persistence and guaranteed delivery
- Horizontal scalability
- Zero data loss on crashes

Enable by setting REDIS_ENABLED=true in .env

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,16 @@ MIN_ENGLISH_CONFIDENCE=0.8
 # UI Configuration
 # =============================================================================
 UI_ENABLED=true
+
+# =============================================================================
+# Redis Configuration (Optional - for high-performance pipeline)
+# =============================================================================
+# Set REDIS_ENABLED=true to use Redis Streams instead of in-memory queues
+REDIS_ENABLED=false
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=  # Optional - leave empty for no password
+REDIS_MAX_CONNECTIONS=10
+REDIS_STREAM_PREFIX=clio
+REDIS_CONSUMER_PREFIX=clio-consumer
