--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "sse-starlette>=2.0.0",
     "python-multipart>=0.0.6",
     "structlog>=24.1.0",
+    "redis>=5.0.0",
     "pytest>=7.4.0",
     "pytest-asyncio>=0.23.0",
     "httpx>=0.26.0",
