--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,23 @@
-# Clio Whisper Docker Compose
-# Use this for production deployments with Redis
+# Clio Whisper - WhisperLive GPU (Standalone)
+# Uso: docker-compose up -d
 
 services:
-  redis:
-    image: redis:7-alpine
-    container_name: clio-redis
-    restart: unless-stopped
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   whisperlive:
     image: ghcr.io/collabora/whisperlive-gpu:latest
     container_name: clio-whisperlive
     restart: unless-stopped
     ports:
       - "9090:9090"
-    environment:
-      - CUDA_VISIBLE_DEVICES=0
+    volumes:
+      - whisperlive_cache:/root/.cache/whisper
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
-              count: 1
+              count: all
               capabilities: [gpu]
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9090/ || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 volumes:
-  redis_data:
+  whisperlive_cache:
     driver: local
-
-networks:
-  default:
-    name: clio-network
